add restart function

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,62 @@
 body {
+  display: flex;
   font-family: sans-serif;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.eventOutput {
+  display: none;
+  height: 200px;
+}
+.dateForm {
+  display: none;
+}
+.restartTitle {
+  display: none;
+  color: #000;
+  text-align: center;
+}
+
+.on {
+  display: block;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+form > .button {
+  display: block;
+  margin-top: 20px;
+  font-size: 2.2em;
+  background-color: unset;
+  width: 177px;
+  height: 177px;
+  border: 5px solid rgb(136, 255, 0);
+  border-radius: 100px;
+  color: rgb(0, 0, 0);
+}
+
+h1 {
+  font-size: 3.2em;
+  margin: -50px 0 0 0;
+  padding-bottom: 20px;
+  color: rgb(0, 0, 0);
+}
+
+.timeTitle {
+  font-size: 2.2em;
+}
+
+.eventOutput.on:hover {
+  cursor: pointer;
+  color: rgb(136, 255, 0);
+}
+
+.eventOutput.on:hover .restartTitle {
+  display: block;
 }
