--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ form {
 
 form > .button {
   display: block;
-  margin-top: 20px;
+  margin: 20px auto 0;
   font-size: 2.2em;
   background-color: unset;
   width: 177px;
@@ -39,6 +39,12 @@ form > .button {
   border: 5px solid rgb(136, 255, 0);
   border-radius: 100px;
   color: rgb(0, 0, 0);
+}
+
+.dateForm > input {
+  width: 220px;
+  font-size: 1.5em;
+  border: 0;
 }
 
 h1 {
